--- a/source/CodeMangler/Properties/launchSettings.json
+++ b/source/CodeMangler/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CodeMangler": {
       "commandName": "Project",
-      "commandLineArgs": "-i \"D:\\psp\\BeeSharp\\source\\BeeSharp\" -o \"D:\\psp\\BeeSharp\\artifacts\\BeeSharp.g.cs\""
+      "commandLineArgs": "-i \"C:\\Dev\\BeeSharp\\source\\BeeSharp\" -o \"C:\\Dev\\BeeSharp\\\\artifacts\\BeeSharp.g.cs\""
     }
   }
 }
