--- a/source/BeeSharp/BeeSharp.csproj
+++ b/source/BeeSharp/BeeSharp.csproj
@@ -6,7 +6,7 @@
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <Version>0.1.11</Version>
+    <Version>0.1.12</Version>
 
   </PropertyGroup>
 
@@ -16,7 +16,7 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <ContentTargetFolders>contentFiles</ContentTargetFolders>
     <PackageOutputPath>$(ProjectDir)..\..\artifacts</PackageOutputPath>
-    <AssemblyVersion>0.1.10.0</AssemblyVersion>
+    <AssemblyVersion>0.1.12.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -47,6 +47,10 @@
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
     <None Include="..\BeeSharp.Analyzer\bin\$(Configuration)\netstandard2.0\BeeSharp.Analyzer.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <None Include="..\..\artifacts\BeeSharp.g.cs.pp" Pack="true" Visible="false" BuildAction="Compile" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Flux\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
