--- a/test/BeeSharp.Package.Tests/BeeSharp.Package.Test.csproj
+++ b/test/BeeSharp.Package.Tests/BeeSharp.Package.Test.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BeeSharp" Version="0.1.3" />
+    <PackageReference Include="BeeSharp" Version="0.1.12" />
   </ItemGroup>
 
 </Project>
