Small API adaptions and renames

--- a/test/BeeSharp.Compile/BeeSharp.Compile.Test.csproj
+++ b/test/BeeSharp.Compile/BeeSharp.Compile.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <Compile Include="..\..\artifacts\BeeSharp.g.cs" Link="BeeSharp.g.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
   </ItemGroup>
 
 </Project>
